--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
 </head>
 
 <body>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/4QkuvwRftTw" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/4QkuvwRftTw" loading="lazy" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
 	<div class="images">
-		<img src="https://source.unsplash.com/random/400x300?1" />
-		<img src="https://source.unsplash.com/random/400x300?2" />
-		<img src="https://source.unsplash.com/random/400x300?3" />
-		<img src="https://source.unsplash.com/random/400x300?4" />
-		<img src="https://source.unsplash.com/random/400x300?5" />
-		<img src="https://source.unsplash.com/random/400x300?6" />
-		<img src="https://source.unsplash.com/random/400x300?7" />
-		<img src="https://source.unsplash.com/random/400x300?8" />
-		<img src="https://source.unsplash.com/random/400x300?9" />
-		<img src="https://source.unsplash.com/random/400x300?10" />
-		<img src="https://source.unsplash.com/random/400x300?11" />
-		<img src="https://source.unsplash.com/random/400x300?12" />
-		<img src="https://source.unsplash.com/random/400x300?13" />
-		<img src="https://source.unsplash.com/random/400x300?14" />
-		<img src="https://source.unsplash.com/random/400x300?15" />
-		<img src="https://source.unsplash.com/random/400x300?16" />
-		<img src="https://source.unsplash.com/random/400x300?17" />
+		<img src="https://source.unsplash.com/random/400x300?1" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?2" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?3" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?4" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?5" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?6" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?7" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?8" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?9" loading="lazy"/>
+		<img src="https://source.unsplash.com/random/400x300?10"loading="lazy" />
+		<img src="https://source.unsplash.com/random/400x300?11"loading="lazy" />
+		<img src="https://source.unsplash.com/random/400x300?12"loading="lazy" />
+		<img src="https://source.unsplash.com/random/400x300?13"loading="lazy" />
+		<img src="https://source.unsplash.com/random/400x300?14"loading="lazy" />
+		<img src="https://source.unsplash.com/random/400x300?15"loading="lazy" />
+		<img src="https://source.unsplash.com/random/400x300?16"loading="lazy" />
+		<img src="https://source.unsplash.com/random/400x300?17"loading="lazy" />
 	</div>
 	<div class="container">
 		<div class="box">
 			<h1>Test-Change 2</h1>
 		</div>
 		<div class="box">
-			<img src="https://source.unsplash.com/random/500x300" />
+			<img src="https://source.unsplash.com/random/500x300" loading="lazy" />
 		</div>
 		<div class="box">
 			<h2>Breaking news</h2>
