--- a/index.html
+++ b/index.html
@@ -1,20 +1,9 @@
 <!doctype html>
 <head>
 	<meta charset="utf-8">
-	<!-- Google Analytics -->
-	<script>
-		window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-		ga('create', 'UA-XXXXX-Y', 'auto');
-		ga('send', 'pageview');
-	</script>
-	<!-- End Google Analytics -->
-	<script src='https://www.google-analytics.com/analytics.js'></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	<link rel="stylesheet" href="styles.css" />
-	<link rel="stylesheet" href="jquery-ui.css" />
 	<title>Website with perf issues</title>
 </head>
-
 <body>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/4QkuvwRftTw" loading="lazy" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
 	<div class="images">
@@ -48,5 +37,12 @@
 			<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 		</div>
 	</div>
+	<script src='https://www.google-analytics.com/analytics.js' defer></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.js" defer></script>
+	<script defer>
+		window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+		ga('create', 'UA-XXXXX-Y', 'auto');
+		ga('send', 'pageview');
+	</script>
 </body>
 </html>
