add "placeholder" remonve unnecessary css class

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="styles.css" />
 	<title>Website with perf issues</title>
+	<!-- dns lookup or prefetch for source.unplash.com?-->
 </head>
 <body>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/4QkuvwRftTw" loading="lazy" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
@@ -30,7 +31,7 @@
 			<h1>Test-Change 2</h1>
 		</div>
 		<div class="box">
-			<img src="https://source.unsplash.com/random/500x300" loading="lazy" />
+			<img src="https://source.unsplash.com/random/500x300" loading="lazy" style="width: 500px; height: 300px; background: grey;"/>
 		</div>
 		<div class="box">
 			<h2>Breaking news</h2>
