change back to grey

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<h1>Test-Change 2</h1>
 		</div>
 		<div class="box">
-			<img src="https://source.unsplash.com/random/500x300" loading="lazy" style="width: 500px; height: 300px; background: red;"/>
+			<img src="https://source.unsplash.com/random/500x300" loading="lazy" style="width: 500px; height: 300px; background: grey;"/>
 		</div>
 		<div class="box">
 			<h2>Breaking news</h2>
